# Assignment7_mcp-multi-agent-game

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  CERTIFICATION_VERIFICATION_GUIDE.md  CHANGELOG.md  CI_CD_STATUS.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_85_PERCENT_ANALYSIS.md  COMPREHENSIVE_DASHBOARD_SUMMARY.md  CONTRIBUTING.md  CORRECT_VALIDATION.txt  DASHBOARD_COMPLETE_TESTING_GUIDE.md  DASHBOARD_FINAL_GUIDE.md  DASHBOARD_USAGE_GUIDE.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_EXCELLENCE_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_STRUCTURE.md  Dockerfile  Dockerfile.test  ENHANCEMENTS_COMPLETE.md  EXECUTIVE_SUMMARY.md  EXTENSIBILITY_FEATURES.md  FINAL_COVERAGE_SUMMARY.md  FORMATTING_FIXES_COMPLETE.md  FORMAT_INSTRUCTIONS.md  HIGHEST_MIT_LEVEL_ISO_CERTIFICATION.md  HIGHEST_MIT_LEVEL_SUMMARY.md  HOW_TO_START_TOURNAMENT.md  INNOVATION_SHOWCASE.md  INSTALL.md  ISO_COMPLIANCE_SUMMARY.md  Jenkinsfile  LICENSE  LINTING_FIXES.md  MANIFEST.in  MASTER_DOCUMENTATION.md  MIT_85_COVERAGE_ACTION_PLAN.md  MIT_DOCUMENTATION_REORGANIZATION_COMPLETE.md  (+62 more)
.githooks/: install-hooks.sh  pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  iso-compliance-verification.yml  release.yml  test.yml
config/: servers.json  system.json
config/agents/: agents_config.json
config/defaults/: player.json  referee.json
config/events/: events_config.json
config/games/: games_registry.json
config/leagues/: league_2025_even_odd.json
config/middleware/: middleware_config.json
config/observability/: observability_config.json
config/plugins/: plugins_config.json
config/strategies/: strategies_config.json
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_COMPREHENSIVE.md  CI_CD_GUIDE.md  COMMAND_REFERENCE.md  COMMUNICATION_FLOW_DIAGRAM.md  COMMUNITY_QUICK_REFERENCE.md  COMPLETE_VISUAL_ARCHITECTURE.md  COMPREHENSIVE_COST_ANALYSIS.md  COMPREHENSIVE_DASHBOARD_GUIDE.md  COMPREHENSIVE_TESTING.md  DASHBOARD.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REORGANIZATION_MIT_LEVEL.md  DOCUMENTATION_REORGANIZATION_PLAN.md  EDGE_CASES_CATALOG.md  EDGE_CASES_MODULAR.md  EDGE_CASES_TESTING.md  EXCEPTIONAL_VISUALIZATION_ENHANCEMENTS.md  EXTENSIBILITY_GUIDE.md  FUTURE_ENHANCEMENTS.md  GAME_REPLACEMENT_GUIDE.md  GAME_THEORY_STRATEGIES.md  HIGHEST_MIT_LEVEL_SUMMARY.md  INNOVATION.md  ISO_IEC_25010_CERTIFICATION.md  ISO_IEC_25010_COMPLIANCE.md  ISO_IEC_25010_COMPLIANCE_MATRIX.md  MASTER_DOCUMENTATION.md  MIT_LEVEL_EXTENSIBILITY_CERTIFICATION.md  MIT_LEVEL_INNOVATIONS.md  NAVIGATION_MAP.md  PLUGINS.md  PLUGIN_DEVELOPMENT.md  PLUGIN_DEVELOPMENT_GUIDE.md  PRD.md  PRD_COMPREHENSIVE.md  PROJECT_STRUCTURE_MIT_VERIFICATION.md  (+8 more)
examples/: quantum_strategy_demo.py
experiments/: advanced_sensitivity.py  benchmarks.py  brqc_validation.py  causal_validation.py  research_paper_generator.py  run_complete_research.py  sensitivity_analysis.py  statistical_comparison.py  theorem1_validation.py  visualization.py
paper/: brqc_paper_section.md
plugins/: README.md  system_monitor_plugin.py
proofs/: theorem1_quantum_convergence.md
research/: EXPERIMENTAL_VALIDATION_FRAMEWORK.md  MIT_LEVEL_RESEARCH_MASTER.md  README.md  README_MIT_LEVEL.md  RESEARCH_ARTIFACTS_INDEX.md
scripts/: FORMATTING_NOTE.txt  completion_summary.sh  final_status.sh  fix_lints.py  format_all.sh  format_code.py  format_code.sh  lint.sh  run_coverage.sh  run_league.sh  run_tests.sh  setup.sh  test_summary.sh  verify_compliance.sh  verify_iso_25010_compliance.py  verify_testing_compliance.py  verify_testing_infrastructure.sh
src/: __init__.py  cli.py  main.py
tests/: README.md  __init__.py  conftest.py  test_adaptive_bayesian_strategy.py  test_additional_simple_coverage.py  test_analytics_comprehensive.py  test_analytics_engine_reset.py  test_classic_strategies_comprehensive.py  test_cli.py  test_complete_game_flow.py  test_config_comprehensive.py  test_config_loader.py  test_config_loader_comprehensive.py  test_config_loader_coverage.py  test_config_validation.py  test_configuration_defaults.py  test_coverage_validation.py  test_dashboard_api.py  test_dependency_injection.py  test_edge_cases_real_data.py  test_event_bus.py  test_event_decorators.py  test_exceptions_comprehensive.py  test_extension_points.py  test_final_85_push.py  test_final_coverage_push.py  test_functional_comprehensive.py  test_functional_real_flow.py  test_game.py  test_health.py  test_health_comprehensive.py  test_health_coverage.py  test_integration.py  test_integration_real_data.py  test_launcher_comprehensive.py  test_league_manager_agent.py  test_league_manager_coverage.py  test_lifecycle.py  test_logger.py  test_logger_and_tracing.py  (+37 more)
(+261 files in other folders)
