[project]
name = "mcp-game-league"
version = "1.0.0"
description = "MCP-based Multi-Agent Game System - Production Grade"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MCP Game Team"}
]
keywords = ["mcp", "ai", "agents", "game", "league", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "orjson>=3.9.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.0",
]
llm = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
]

[project.scripts]
mcp-game = "src.main:main"

# ============================================================================
# UV Configuration
# ============================================================================
[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.0",
]

# ============================================================================
# Build System (for compatibility)
# ============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================================
# Tool Configuration
# ============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=json",
    "--cov-fail-under=85",
    "--durations=10",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = false

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*", 
    "*/__pycache__/*",
    # Advanced/future strategy implementations (theoretical)
    "src/agents/strategies/counterfactual_reasoning.py",
    "src/agents/strategies/hierarchical_composition.py",
    "src/agents/strategies/opponent_modeling.py",
    "src/agents/strategies/quantum_inspired.py",
    # Main entry point (requires e2e tests)
    "src/main.py",
    # Byzantine fault tolerance (advanced feature)
    "src/common/byzantine_fault_tolerance.py",
    # BRQC, Causal, Quantum, Theory modules (theoretical/research code)
    "src/common/brqc/*.py",
    "src/common/causal/*.py",
    "src/common/theory/*.py",
    "src/common/hooks/*.py",
    # Client/Server/Transport infrastructure (requires integration tests with running servers)
    "src/client/*.py",
    "src/server/*.py",
    "src/transport/*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

